[package]
name = "move-readme-generator"
version = "0.1.0"
description = "Library for generating a readme from a Move package."
homepage = "https://moving.wtf"
repository = "https://github.com/movingco/move-readme"
authors = ["Ian Macalinao <ian@moving.wtf>"]
license = "Apache-2.0"
edition = "2021"
keywords = ["readme"]

[features]
default = []
address20 = ["move-idl/address20", "move-core-types/address20"]
address32 = ["move-idl/address32", "move-core-types/address32"]

[dependencies]
anyhow = "1"
move-idl = "0.4.0"
module-id = "0.1.0"
move-core-types = { version = "0.1.0", package = "mv-core-types" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.0"
rustdoc-to-markdown = { version = "0.1.0", path = "../rustdoc-to-markdown" }
tera = { version = "1", default-features = false }
